--- a/public/css/style.css
+++ b/public/css/style.css
@@ -309,6 +309,7 @@ body {
         margin-top: 1.5em;
     }
 }
+
 /*******************************************************************************/
 /************************** HOME ***********************************************/
 
@@ -396,9 +397,157 @@ body {
     margin: 1.5em 0;
 }
 
-/* RESPONSIVE A FAIRE */
+@media (max-width: 1024px) {
+    .product-card {
+        width: 31.5%;
+    }
+}
 
+@media (max-width: 768px) {
+    .product-card {
+        width: 49%;
+    }
+}
 
+@media (max-width: 500px) {
+    .product-card {
+        width: 100%;
+    }
+}
+
+/*******************************************************************************/
+/************************** PRODUCT DETAIL *************************************/
+
+.cat-title {
+    margin: 0.5em 0;
+}
+.block-position {
+    display: flex;
+    justify-content: space-between
+}
+
+.block-position .block-left {
+    display: flex;
+    flex-direction: column;
+    width: 22.5%;
+    margin-bottom: 2em;
+}
+
+.block-position .block-left .block-left-cat {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2em;
+    border-radius: 0.25rem;
+    background-color: white;
+}
+
+.block-position .block-left .block-left-cat a {
+    text-decoration: none;
+    color: black;
+    padding: .5rem 1rem;
+    margin-bottom: 0;
+    color: #212529;
+    border-top: 1px solid rgba(0,0,0,.125);
+}
+
+.block-position .block-left .block-left-cat a:hover {
+    color: #13967d;
+}
+
+.block-position .block-left .block-left-cat a.active {
+    color: #fff;
+    background-color: #2c3e50;
+    border-color: #2c3e50;
+}
+
+.block-position .block-left .block-left-user {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 0.25rem;
+}
+
+.block-position .block-left .block-left-user .user-infos {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1em;
+}
+
+.block-position .block-left .block-left-user .user-infos img {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 1em;
+}
+
+.block-position .block-left .block-left-user .user-infos a {
+    text-decoration: none;
+    color: black;
+    font-weight: 700;
+}
+
+.block-position .block-left .block-left-user .user-infos a:hover {
+    color: #13967d;
+}
+
+.block-position .block-left .block-left-user i {
+    margin: 0 1.2em;
+}
+
+.block-position .detail-block {
+    display: flex;
+    flex-direction: column;
+    width: 75.5%;
+    margin-bottom: 5em;
+}
+
+.block-position .detail-block .detail-product {
+    display: flex;
+    background-color: white;
+}
+
+.block-position .detail-block .detail-product .detail-img {
+    width: 40%;
+}
+
+.block-position .detail-block .detail-product .detail-img img {
+    width: 100%;
+    height: auto;
+    border-right: 2px solid #f7f7f7;
+}
+
+.block-position .detail-block .detail-product .detail-product-infos {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+}
+
+.block-position .detail-block .detail-product .detail-product-infos .product-presentation {
+    background-color: #f7f7f7;
+    border-bottom: 1px solid #d8d8d8;
+    border-radius: 0.25rem;
+    padding: 1em 1em 0 1em;
+}
+
+.block-position .detail-block .detail-product .detail-product-infos .product-infos {
+    padding: 1em 1em 0 1em;
+}
+
+.block-position .detail-block .detail-product .detail-product-infos .product-infos .text-description {
+    text-align: justify;
+    margin: 1.5em 0;
+}
+
+.block-position .detail-block .detail-created {
+    background-color: #f7f7f7;
+    border-bottom: 1px solid #d8d8d8;
+    border-radius: 0.25rem;
+    padding: 1em 1em 0 1em;
+}
+
+/* RESPONSIVE PAGE PRODUCT DETAIL A FAIRE !*/
 
 
 /*******************************************************************************/
