--- a/template/error404.twig
+++ b/template/error404.twig
@@ -1,20 +1,22 @@
 {% extends "layout.twig" %}
 	
-	{% block title %} <title>S'inscrire</title> {% endblock %}
+{% block title %} <title>Page introuvable</title> {% endblock %}
 
-    {% block content %}
+{% block content %}
 
-    <div class="container">
-        <div class="row">
+<div class="container">
+    <div class="row">
         <div class="col-sm-9 col-md-9 col-lg-9 mx-auto">
             <div class="card card-signin flex-row my-5">
-            <div class="card-body">
-                <h3 class="card-title text-center">La page que vous avez demandé est introuvable.</h3>
-                <a href="index.php?url=home" class="btn btn-lg btn-primary btn-block">Retour vers l'accueil</a>
+                <div class="card-body">
+                    <h3 class="card-title text-center">La page que vous avez demandé est introuvable.</h3>
+                    <div class="text-center">
+                        <a href="index.php?url=home" class="btn btn-lg btn-success btn-block text-center my-4">Retour vers l'accueil</a>
+                    </div>
+                </div>
             </div>
-            </div>
-        </div>
         </div>
     </div>
+</div>
 
 {% endblock %}	
