--- a/template/admin/adminProducts.twig
+++ b/template/admin/adminProducts.twig
@@ -1,4 +1,4 @@
-{% extends "adminLayout.twig" %}
+{% extends "./admin/adminLayout.twig" %}
 
 {% block title %} <title>Admin</title> {% endblock %}
 
