--- a/template/home.twig
+++ b/template/home.twig
@@ -39,6 +39,7 @@
     
                 <div class="product-detail">
                     <a href="index.php?url=product&id={{product.id}}" class="">Voir plus</a>
+                    <a class="favourite-btn" href="index.php?url=addFavourite&id={{product.id}}"><i class="fa-regular fa-heart"></i></a>
                 </div>
             </div>
         </div>
