--- a/template/productDetail.twig
+++ b/template/productDetail.twig
@@ -3,9 +3,9 @@
 {% block title %} <title> Annonce {{product.name}} </title> {% endblock %}
 {% block content %}
 
-<body>
+<body class="productDetail">
     <div class="container">
-        <h1 class="cat-title">Catégories</h1>
+        <h1 class="cat-title">Catégorie {{paramName}}</h1>
         
         <div class="block-position">
             <div class="block-left">
