--- a/public/css/style.css
+++ b/public/css/style.css
@@ -208,11 +208,6 @@ body {
 }
 
 @media (max-width: 1024px) {
-    #menu .logo h2 {
-        font-size: 20px;
-        font-weight: 700;
-    }
-    
     #menu .nav-end .search {
     padding: 8px;
     margin-right: 2em;
@@ -228,8 +223,8 @@ body {
         margin-right: 5px;
     }
     
-    #menu .logo h2 {
-        font-size: 16px;
+    #menu .logo h1 {
+        font-size: 22px;
     }
     
     #menu .items li a {
@@ -282,11 +277,17 @@ body {
     }
     
     #menu .logo img {
+        width: 45px;
+        height: auto;
         margin-right: 0;
     }
     
-    #menu .logo h2 {
+    #menu .logo h1 {
         display: none;
+    }
+
+    #menu .nav-end .profile img {
+        margin-left: 1.5em;
     }
     
     #nav-cat .items-cat li a {
@@ -408,6 +409,11 @@ body {
     margin: 1.5em 0;
 }
 
+.product-card-body .product-detail .favourite-btn {
+    background-color: #18bc9c;
+    border-color: #18bc9c;
+}
+
 @media (max-width: 1024px) {
     .product-card {
         width: 31.5%;
@@ -431,7 +437,12 @@ body {
 
 .cat-title {
     margin: 0.5em 0;
+    font-family: 'Final-fantasy', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 300;
 }
+
 .block-position {
     display: flex;
     justify-content: space-between
@@ -559,7 +570,92 @@ body {
 }
 
 /* RESPONSIVE PAGE PRODUCT DETAIL A FAIRE ! */
+@media (max-width: 768px) {
+    .cat-title {
+        font-size: 32px;
+    }
+    
+    
+    .block-position .block-left .block-left-user {
+        padding: 0.5rem;
+        font-size: 15px;
+    }
+    
+    .block-position .block-left .block-left-user .user-infos img {
+        width: 30px;
+        height: 30px;
+        margin-right: 0.3em;
+    }
+    
+    .block-position .block-left .block-left-user i {
+        margin: 0 0.5em;
+        font-size: 12px;
+    }
+    
+    .block-position .detail-block .detail-product {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .block-position .detail-block .detail-product .detail-img {
+        width: 100%;
+        text-align: center;
+    }
+    
+    .block-position .detail-block .detail-product .detail-img img {
+        width: auto;
+        max-width: 100%;
+        height: 100%;
+        max-height: 400px;
+        border-right: 2px solid #f7f7f7;
+        border-left: 2px solid #f7f7f7;
+    }
+        
+    .block-position .detail-block .detail-product .detail-product-infos {
+        width: 100%;
+    }
+    
+}
 
+@media (max-width: 640px) {
+    .cat-title {
+        font-size: 40px;
+    }
+    .block-position {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    
+    .block-position .block-left .block-left-cat {
+        display: none;
+    }
+    
+    .block-position .block-left {
+        width: 100%;
+    }
+    
+    .block-position .detail-block {
+        width: 100%;
+        margin-bottom: 2.5em;
+    }
+    
+    .block-position .block-left .block-left-user {
+        padding: 1rem;
+        font-size: 18px;
+    }
+    
+    .block-position .block-left .block-left-user .user-infos img {
+        width: 40px;
+        height: 40px;
+        margin-right: 1em;
+    }
+    
+    .block-position .block-left .block-left-user i {
+        margin: 0 0.5em;
+        font-size: 14px;
+    }
+}
 
 /*******************************************************************************/
 /**************************** ADMIN *******************************************/
