--- a/template/account.twig
+++ b/template/account.twig
@@ -5,55 +5,62 @@
 {% block content %}
 
 <div class="container">
-  	<div class="row">
- 		<h1 class="my-4 col-md-4">Bienvenue {{session.firstName}} !</h1>
-	</div>
-</div>
-
-<div class="container">
+    
     <div class="row">
-        <div class="col-lg-3">
-            <div class="list-group">
-            	<h4 class="list-group-item active"> Informations</h4>
-                <p class="list-group-item"><b>Nom : </b> {{session.lastName}} </p>
-                <p class="list-group-item"><b>Prénom : </b>  {{session.firstName}} </p>
-                <p class="list-group-item"><b>Téléphone : </b>  {{session.phone}} </p>
-                <p class="list-group-item"><b>Email : </b>  {{session.email}} </p>
-                <a class="btn btn-primary" id="updateAccount" href="index.php?url=account/update">Modifier mes informations personnelles</a>
-		        <a class="btn btn-danger" id="updateAccount" href="index.php?url=account/delete">Supprimer mon compte</a>
-		        <hr>
-		        <a class="btn btn-success" id="btn-ajouter-annonce" href="index.php?url=product/create">Ajouter une annonce</a>
-		        <hr>
-		        <a class="btn btn-danger" id="logout" href="index.php?url=logout">Déconnexion</a>
-		        <hr>
-		        <a class="btn btn-warning" id="panel-admin" href="index.php?url=admin/users" style="visibility:{{ session.role != 'admin' ? 'hidden' : 'visible' }}">Accès panel admin</a>
-		        <hr style="visibility:{{ session.role != 'admin' ? 'hidden' : 'visible' }}">
+    	<div class="col-md-8">
+			<h1 class="my-4 col-md-8">Bienvenue {{session.firstName}} !</h1>
+		</div>
+		<div class="col-md-4">
+			<a class="my-5 px-5 btn btn-success" id="btn-ajouter-annonce" href="index.php?url=product/create">Ajouter une annonce</a>
+		</div>
+	</div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="list-group">
+                	<h4 class="list-group-item active"> Informations</h4>
+                    <p class="list-group-item"><b>Nom : </b> {{session.lastName}} </p>
+                    <p class="list-group-item"><b>Prénom : </b>  {{session.firstName}} </p>
+                    <p class="list-group-item"><b>Téléphone : </b>  {{session.phone}} </p>
+                    <p class="list-group-item"><b>Email : </b>  {{session.email}} </p>
+    		        <a class="btn btn-success" id="favourites" href="index.php?url=favourites"><i class="fa-regular fa-heart"></i> Accèder à mes favoris</a>
+    		        <hr>
+    		        <a class="btn btn-danger" id="logout" href="index.php?url=logout">Déconnexion</a>
+    		        <hr>
+                    <a class="btn btn-primary" id="updateAccount" href="index.php?url=account/update">Modifier mes informations personnelles</a>
+    		        <a class="btn btn-danger" id="updateAccount" href="index.php?url=account/delete"><i class="fa-solid fa-trash"></i> Supprimer mon compte</a>
+    		        <hr>
+    		        <a class="btn btn-warning" id="panel-admin" href="index.php?url=admin/users" style="visibility:{{ session.role != 'admin' ? 'hidden' : 'visible' }}">
+    		            <i class="fa-solid fa-lock"></i> Panel admin</a>
+    		        <hr style="visibility:{{ session.role != 'admin' ? 'hidden' : 'visible' }}">
+                </div>
             </div>
-        </div>
-        
-        <div class="col-lg-9">
-            <div class="row text-center">
-                {% for product in products %}
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="index.php?url=product&id={{product.id}}">
-                                <img class="card-img-top" src="./public/img/products/{{product.urlPicture}}" alt="Image de {{product.name}}">
-                            </a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="index.php?url=product&id={{product.id}}">{{product.name}}</a>
-                                </h4>
-                                <h5> Prix: {{product.price}} euros</h5>
-                                <p class="card-text">{{product.description}}</p>
-                                <a class="btn btn-primary" href="index.php?url=product/update&id={{product.id}}" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Modifier</a>
-                                <a class="btn btn-danger" href="index.php?url=deleteProduct&id={{product.id}}&img={{product.urlPicture}}" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Supprimer</a>
+            
+            <div class="col-lg-9">
+                <div class="row text-center">
+                    {% for product in products %}
+                        <div class="col-lg-4 col-md-6 mb-4">
+                            <div class="card h-100">
+                                <a href="index.php?url=product&id={{product.id}}">
+                                    <img class="card-img-top" src="./public/img/products/{{product.urlPicture}}" alt="Image de {{product.name}}">
+                                </a>
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        <a href="index.php?url=product&id={{product.id}}">{{product.name}}</a>
+                                    </h4>
+                                    <h5> Prix: {{product.price}} euros</h5>
+                                    <p class="card-text">{{product.description}}</p>
+                                    <a class="btn btn-primary" href="index.php?url=product/update&id={{product.id}}" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Modifier</a>
+                                    <a class="btn btn-danger" href="index.php?url=deleteProduct&id={{product.id}}&img={{product.urlPicture}}" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Supprimer</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                {% endfor %}
+                    {% endfor %}
+                </div>
             </div>
-        </div>
-	</div>
-</div>  
+    	</div>
+    </div>  
+</div>
 
 {% endblock %}
