--- a/template/layout.twig
+++ b/template/layout.twig
@@ -35,9 +35,11 @@
                 </div>
                 
                 <div class="nav-end">
-                    <div class="search">
-                        <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                        <input id="search" type="text" placeholder="Rechercher">
+                    <div class="block-search">
+                        <div class="search">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <input id="search" name="q-search" type="text" placeholder="Rechercher">
+                        </div>
                         <ul id="list-search"></ul>
                     </div>
                     
@@ -98,6 +100,8 @@
                     <a href="https://www.linkedin.com/in/jessica-loreau-6b6561192/"><img src="./public/img/merci2.png" alt="Collègue lambda"></a>
                 </div>
             </div>
-        </footer>	
+        </footer>
+        
+        <script type="text/javascript" src="./public/js/ajax.js"></script>
     </body>
 </html>
