Vue et fonctions annonces par user

--- a/template/productDetail.twig
+++ b/template/productDetail.twig
@@ -19,8 +19,8 @@
                 
                 <div class="block-left-user">
                     <div class="user-infos">
-                        <a href="#"><img src="./public/img/user2.png" alt="profile"></a>
-                        <a href="#">{{user.firstName}} {{user.lastName}}</a>
+                        <a href="index.php?url=products/user&id={{user.id}}"><img src="./public/img/user2.png" alt="profile"></a>
+                        <a href="index.php?url=products/user&id={{user.id}}">{{user.firstName}} {{user.lastName}}</a>
                     </div>
                     <p><i class="fa-solid fa-phone"></i> {{user.phone}}</p>
                     <p><i class="fa-regular fa-envelope"></i> {{user.email}}</p>
