--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,23 @@
+/*
+---------------------------- SOMMAIRE CSS --------------------------------------
+
+#1 FONTS
+#2 VARIABLES
+#3 BALISES HTML
+#4 LAYOUT
+#5 PAGE "HOME"
+#6 PAGE "PRODUCT DETAIL"
+#7 ADMIN
+
+--------------------------------------------------------------------------------
+*/
+
+
+/*
+#1 FONTS
+ */
+ 
+ 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 @font-face {
@@ -7,6 +27,17 @@
 	font-style: normal;
 }
 
+/*
+#2 VARIABLES
+ */
+ 
+:root {
+    --main-color: brown;
+}
+ 
+/*
+#3 BALISES HTML
+ */
 
 * {
     margin: 0;
@@ -20,6 +51,10 @@ body {
     background: #E5E7EB;
     color: #212529;
 }
+
+/*
+#4 LAYOUT
+ */
 
 #menu {
     background-color: #111827;
@@ -359,6 +394,9 @@ body {
 /*******************************************************************************/
 /************************** HOME ***********************************************/
 
+/*
+#5 PAGE "HOME"
+ */
 .home-image {
     width: 100%;
     height: auto;
@@ -470,10 +508,151 @@ body {
         width: 100%;
     }
 }
+/*******************************************************************************/
+/************************** PRODUCTS/USER **************************************/
+
+/*
+#6 PAGE "PRODUCTS/USER"
+ */
+
+.block-position {
+    display: flex;
+    justify-content: space-between;
+}
+ 
+.user-info {
+    background-color: white;
+    border: 1px solid #d8d8d8;
+    border-radius: 0.3rem;
+    padding: 1rem;
+}
+
+.user-info .title-user {
+    display: flex;
+    align-items: center;
+}
+
+.user-info .title-user img {
+    width: 45px;
+    height: 45px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 1em;
+    margin-bottom: 1em;
+}
+
+.user-info .title-user h3 {
+    font-size: 28px;
+}
+
+.user-info i {
+    font-size: 20px;
+    margin-left: 0.6em;
+    margin-right: 1.4em;
+}
+
+.block-right {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-left: 1.5em;
+    width: 79%;
+}
+
+.card-product-position {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 31.5%;
+    background-color: white;
+    margin-bottom: 1.5em;
+    border: 1px solid #d8d8d8;
+    border-radius: 0.3rem;
+}
+
+.card-product-position img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 0.5em;
+}
+
+@media (max-width: 1024px) {
+    .user-info .title-user img {
+        width: 35px;
+        height: 35px;
+        margin-right: 1em;
+        margin-bottom: 1em;
+    }
+    
+    .user-info .title-user h3 {
+        font-size: 18px;
+    }
+    
+    .user-info i {
+        font-size: 16px;
+        margin-left: 0.5em;
+        margin-right: 1.2em;
+    }
+}
+
+@media (max-width: 768px) {
+    .user-info .title-user img {
+        width: 30px;
+        height: 30px;
+        margin-right: 0.5em;
+        margin-bottom: 1.5em;
+    }
+    
+    .user-info .title-user h3 {
+        font-size: 16px;
+    }
+    
+    .user-info i {
+        font-size: 12px;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    
+    .user-info p {
+        font-size: 14px;
+    }
+    
+    .block-right {
+        margin-left: 1em;
+    }
+    .card-product-position {
+        width: 49%;
+    }
+}
+
+@media (max-width: 640px) {
+    .block-right {
+        width: 100%;
+        margin-left: 0;
+    }
+    
+    .card-product-position {
+        width: 49%;
+    }
+}
+
+@media (max-width: 500px) {
+    .block-right {
+        width: 100%;
+    }
+    
+    .card-product-position {
+        width: 100%;
+    }
+}
+
 
 /*******************************************************************************/
 /************************** PRODUCT DETAIL *************************************/
 
+/*
+#7 PAGE "PRODUCT DETAIL"
+ */
 .cat-title {
     margin: 0.5em 0;
     font-family: 'Final-fantasy', sans-serif;
@@ -699,6 +878,10 @@ body {
 /*******************************************************************************/
 /**************************** ADMIN *******************************************/
 
+/*
+#8 ADMIN
+ */
+ 
 .admin-body {
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
